base/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next
  creationTimestamp: null
  labels:
    app: next
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: next
    spec:
      containers:
      - image: IMAGE_REPLACE_OVERLAY
        name: next
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 3000

status: {}
