base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: next
spec:
  selector:
    app: next
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: NodePort
