base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-ip
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: next
      port:
        number: 3000
